Prevent NPE from InstrumentationCommand in case interceptor fails to load (#600)
* Prevent NPE from InstrumentationCommand

* Fix code check